# Image-Hue-Change

./: CMakeLists.txt  README.md  settings.json
src/: main.cpp  main.h
src/colourSpace/: ColourSpace.hpp  OkLCh.cpp  OkLCh.h  sRGB.cpp  sRGB.h  sRGB.hpp
src/image/: Image.cpp  Image.h
src/maths/: Maths.hpp  Matrix.cpp  Matrix.h
src/misc/: Log.cpp  Log.h  Pseudo2DArray.cpp  Pseudo2DArray.h  Pseudo2DArray.hpp
